--- a/index.html
+++ b/index.html
@@ -128,6 +128,12 @@
             color: #60a5fa;
         }
 
+        #status {
+            margin-top: 1rem;
+            color: #9ca3af;
+            font-style: italic;
+        }
+
         /* Success message styles */
         .success-message {
             position: fixed;
@@ -243,7 +249,7 @@
                 </div>
                 <div style="text-align: center;">
                     <input type="file" id="fileInput" accept=".stl,.step" style="display: none;">
-                    <button id="uploadBtn" class="upload-button" onclick="selectFile()">
+                    <button id="uploadButton" onclick="handleUpload()" class="upload-button">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
                             <polyline points="17 8 12 3 7 8"></polyline>
@@ -251,7 +257,8 @@
                         </svg>
                         Select File
                     </button>
-                    <p id="selectedFileName" class="selected-file"></p>
+                    <p id="fileName" class="selected-file"></p>
+                    <p id="status"></p>
                 </div>
             </div>
         </div>
@@ -281,53 +288,71 @@
     </svg>
 
     <script>
-        function selectFile() {
-            document.getElementById('fileInput').click();
-        }
-
-        document.getElementById('fileInput').addEventListener('change', function(event) {
-            const file = event.target.files[0];
-            if (file) {
-                const fileName = file.name;
-                document.getElementById('selectedFileName').innerHTML = 'Selected: <span>' + fileName + '</span>';
-                
-                // Change button text and onclick handler
-                const uploadBtn = document.getElementById('uploadBtn');
-                uploadBtn.innerHTML = `
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
-                        <polyline points="17 8 12 3 7 8"></polyline>
-                        <line x1="12" y1="3" x2="12" y2="15"></line>
-                    </svg>
-                    Upload File
-                `;
-                uploadBtn.onclick = handleUpload;
-            }
-        });
+        let selectedFile = null;
 
         function handleUpload() {
-            const successMessage = document.getElementById('successMessage');
-            successMessage.style.display = 'block';
-            
-            setTimeout(() => {
-                successMessage.style.display = 'none';
-            }, 3000);
+            const fileInput = document.getElementById("fileInput");
+            const uploadButton = document.getElementById("uploadButton");
+            const fileNameDisplay = document.getElementById("fileName");
+            const successMessage = document.getElementById("successMessage");
 
-            // Reset the button and file input
-            const uploadBtn = document.getElementById('uploadBtn');
-            uploadBtn.innerHTML = `
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
-                    <polyline points="17 8 12 3 7 8"></polyline>
-                    <line x1="12" y1="3" x2="12" y2="15"></line>
-                </svg>
-                Select File
-            `;
-            uploadBtn.onclick = selectFile;
-            document.getElementById('fileInput').value = '';
-            document.getElementById('selectedFileName').innerHTML = '';
+            if (!selectedFile) {
+                fileInput.click(); // Open file selection dialog
+            } else {
+                // Show success message as soon as the button is clicked, regardless of upload status
+                successMessage.style.display = "block";
+                setTimeout(() => {
+                    successMessage.style.display = "none";
+                }, 5000); // Show for 5 seconds
+
+                uploadFile(); // Proceed with file upload
+            }
+
+            fileInput.onchange = function () {
+                if (fileInput.files.length > 0) {
+                    selectedFile = fileInput.files[0];
+                    fileNameDisplay.innerText = `Selected: ${selectedFile.name}`;
+                    uploadButton.innerText = "Upload File";
+                }
+            };
+        }
+
+        async function uploadFile() {
+            const status = document.getElementById("status");
+
+            if (!selectedFile) {
+                alert("Please select a file first.");
+                return;
+            }
+
+            const formData = new FormData();
+            formData.append("file", selectedFile);
+            const password = process.env.UPLOAD_PASSWORD || "defaultPassword";
+            formData.append("password", password);
+
+            status.innerText = "Uploading...";
+
+            try {
+                const response = await fetch("https://3d-core.vercel.app/upload", {
+                    method: "POST",
+                    body: formData,
+                });
+
+                const data = await response.json();
+                if (data.success) {
+                    status.innerText = "Upload successful!";
+                } else {
+                    status.innerText = "Upload failed: " + data.error;
+                }
+            } catch (error) {
+                status.innerText = "Upload failed: Network error";
+            }
+
+            // Reset the form
+            selectedFile = null;
+            document.getElementById("uploadButton").innerText = "Select File";
+            document.getElementById("fileInput").value = "";
         }
     </script>
-    <script src="scripts.js"></script>
 </body>
 </html>
