--- a/index.html
+++ b/index.html
@@ -1,341 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>3D-Core | 3D Printing Service</title>
-  <style>
-    /* (Your new beautiful CSS styles as you provided) */
-
-    /* Base styles */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-      min-height: 100vh;
-      background: linear-gradient(180deg, #111827 0%, #1e3a8a 50%, #111827 100%);
-      color: white;
-    }
-
-    /* Scrollbar styles */
-    ::-webkit-scrollbar {
-      width: 8px;
-    }
-
-    ::-webkit-scrollbar-track {
-      background: #1f2937;
-    }
-
-    ::-webkit-scrollbar-thumb {
-      background: #3b82f6;
-      border-radius: 4px;
-    }
-
-    ::-webkit-scrollbar-thumb:hover {
-      background: #2563eb;
-    }
-
-    /* Header styles */
-    header {
-      position: relative;
-      overflow: hidden;
-      padding: 4rem 1rem;
-      text-align: center;
-    }
-
-    .header-bg {
-      position: absolute;
-      inset: 0;
-      z-index: 0;
-    }
-
-    .header-bg::before {
-      content: '';
-      position: absolute;
-      inset: 0;
-      background-image: url('https://images.unsplash.com/photo-1631468155881-c6c9ff57de1d?q=80&w=2070');
-      background-size: cover;
-      background-position: center;
-      opacity: 0.1;
-    }
-
-    .header-bg::after {
-      content: '';
-      position: absolute;
-      inset: 0;
-      background: linear-gradient(to bottom, transparent, rgba(17, 24, 39, 0.5), #111827);
-    }
-
-    .header-content {
-      position: relative;
-      z-index: 2;
-      max-width: 1280px;
-      margin: 0 auto;
-    }
-
-    .logo-container {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 1rem;
-      margin-bottom: 1.5rem;
-    }
-
-    .logo-text {
-      font-size: 3.5rem;
-      font-weight: bold;
-      background: linear-gradient(to right, #60a5fa, #a855f7);
-      -webkit-background-clip: text;
-      background-clip: text;
-      color: transparent;
-    }
-
-    .subtitle {
-      font-size: 1.25rem;
-      color: #bfdbfe;
-      font-weight: 300;
-    }
-
-    /* Main content styles */
-    main {
-      max-width: 1280px;
-      margin: 0 auto;
-      padding: 3rem 1rem;
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-      gap: 2rem;
-      margin: 2rem 0;
-    }
-
-    .card {
-      background: rgba(31, 41, 55, 0.5);
-      backdrop-filter: blur(8px);
-      border: 1px solid #374151;
-      border-radius: 1rem;
-      padding: 1.5rem;
-      transition: all 0.3s ease;
-    }
-
-    .card:hover {
-      border-color: #3b82f6;
-      transform: translateY(-4px);
-    }
-
-    .card-header {
-      display: flex;
-      align-items: center;
-      gap: 1rem;
-      margin-bottom: 1.5rem;
-    }
-
-    .card-title {
-      font-size: 1.5rem;
-      font-weight: 600;
-      color: white;
-    }
-
-    .card-icon {
-      color: #60a5fa;
-    }
-
-    .price {
-      font-size: 2.25rem;
-      font-weight: bold;
-      color: #60a5fa;
-    }
-
-    .price-text {
-      color: #9ca3af;
-      margin-left: 0.5rem;
-    }
-
-    .upload-button {
-      display: inline-flex;
-      align-items: center;
-      gap: 0.5rem;
-      background-color: #3b82f6;
-      color: white;
-      padding: 0.75rem 1.5rem;
-      border-radius: 0.5rem;
-      border: none;
-      cursor: pointer;
-      font-size: 1rem;
-      transition: background-color 0.2s ease;
-    }
-
-    .upload-button:hover {
-      background-color: #2563eb;
-    }
-
-    #selectedFileName {
-      margin-top: 1rem;
-      color: #9ca3af;
-    }
-
-    /* Success message styles */
-    #successMessage {
-      position: fixed;
-      top: 1rem;
-      right: 1rem;
-      background-color: #22c55e;
-      color: white;
-      padding: 0.75rem 1.5rem;
-      border-radius: 0.5rem;
-      display: none;
-      align-items: center;
-      gap: 0.5rem;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      animation: fadeInDown 0.3s ease-out;
-    }
-
-    /* Robot decoration */
-    .robot-decoration {
-      position: fixed;
-      bottom: 2rem;
-      right: 2rem;
-      width: 8rem;
-      height: 8rem;
-      color: rgba(96, 165, 250, 0.2);
-      pointer-events: none;
-    }
-
-    /* Animations */
-    @keyframes fadeInDown {
-      from {
-        opacity: 0;
-        transform: translateY(-1rem);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    /* Format highlights */
-    .format-highlight {
-      color: #60a5fa;
-      font-weight: 600;
-    }
-
-    /* Responsive adjustments */
-    @media (max-width: 768px) {
-      .logo-text {
-        font-size: 2.5rem;
-      }
-
-      .grid {
-        grid-template-columns: 1fr;
-      }
-
-      .robot-decoration {
-        width: 6rem;
-        height: 6rem;
-      }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>3D-Core | 3D Printing Service</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <div class="header-bg"></div>
-    <div class="header-content">
-      <div class="logo-container">
-        <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="#60a5fa" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-          <path d="M6 9h12v9a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2V9Z"></path>
-          <path d="M5.5 5.5A2.5 2.5 0 0 1 8 3h8a2.5 2.5 0 0 1 0 5H8a2.5 2.5 0 0 1-2.5-2.5Z"></path>
-        </svg>
-        <h1 class="logo-text">3D-Core</h1>
-      </div>
-      <p class="subtitle">Your Reliable 3D Printing Partner</p>
+    <header>
+        <div class="logo">
+            <img src="logo.png" alt="3D-Core Logo">
+            <h1>3D-Core</h1>
+        </div>
+        <p>Your Reliable 3D Printing Partner</p>
+    </header>
+
+    <main>
+        <section class="info">
+            <h2>Supported File Formats</h2>
+            <p>We accept <strong>.STEP</strong> and <strong>.STL</strong> files for 3D printing.</p>
+        </section>
+
+        <section class="pricing">
+            <h2>Printing Prices</h2>
+            <p><strong>$0.10 per gram</strong> of printed material.</p>
+        </section>
+
+        <section class="upload">
+            <h2>Upload Your 3D Design</h2>
+            <input type="file" id="fileInput" accept=".stl,.step" style="display: none;">
+            <button id="uploadButton" onclick="handleUpload()">Select File</button>
+            <p id="fileName"></p>
+            <p id="status"></p>
+        </section>
+    </main>
+
+    <!-- Success Popup -->
+    <div id="successMessage" class="popup" style="display: none;">
+        <p>File Uploaded Successfully!</p>
     </div>
-  </header>
 
-  <main>
-    <div class="grid">
-      <!-- Supported Formats Card -->
-      <div class="card">
-        <div class="card-header">
-          <svg class="card-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M14.5 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.5L14.5 2z"></path>
-            <polyline points="14 2 14 8 20 8"></polyline>
-            <path d="m9 15 2 2 4-4"></path>
-          </svg>
-          <h2 class="card-title">Supported Formats</h2>
-        </div>
-        <p style="color: #9ca3af;">
-          We accept <span class="format-highlight">.STEP</span> and <span class="format-highlight">.STL</span> files for 3D printing.
-        </p>
-      </div>
-
-      <!-- Pricing Card -->
-      <div class="card">
-        <div class="card-header">
-          <svg class="card-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M21 12V7H5a2 2 0 0 1 0-4h14v4"></path>
-            <path d="M3 5v14a2 2 0 0 0 2 2h16v-5"></path>
-            <path d="M18 12a2 2 0 0 0 0 4h4v-4Z"></path>
-          </svg>
-          <h2 class="card-title">Printing Prices</h2>
-        </div>
-        <div>
-          <span class="price">$0.10</span>
-          <span class="price-text">per gram of printed material</span>
-        </div>
-      </div>
-
-      <!-- Upload Card -->
-      <div class="card">
-        <div class="card-header">
-          <svg class="card-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
-            <polyline points="17 8 12 3 7 8"></polyline>
-            <line x1="12" y1="3" x2="12" y2="15"></line>
-          </svg>
-          <h2 class="card-title">Upload Design</h2>
-        </div>
-        <div style="text-align: center;">
-          <input type="file" id="fileInput" accept=".stl,.step" style="display: none;" />
-          <button id="uploadBtn" class="upload-button" onclick="selectFile()">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-              <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
-              <polyline points="17 8 12 3 7 8"></polyline>
-              <line x1="12" y1="3" x2="12" y2="15"></line>
-            </svg>
-            Select File
-          </button>
-          <p id="selectedFileName"></p>
-        </div>
-      </div>
-    </div>
-  </main>
-
-  <!-- Success Message -->
-  <div id="successMessage">
-    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-      <path d="M14.5 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.5L14.5 2z"></path>
-      <polyline points="14 2 14 8 20 8"></polyline>
-      <path d="m9 15 2 2 4-4"></path>
-    </svg>
-    <span>File Uploaded Successfully!</span>
-  </div>
-
-  <!-- Robot Decoration -->
-  <svg class="robot-decoration" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-    <path d="M12 8V4H8"></path>
-    <path d="M16 8V4h4"></path>
-    <rect width="16" height="12" x="4" y="8" rx="2"></rect>
-    <path d="M2 14h2"></path>
-    <path d="M20 14h2"></path>
-    <path d="M15 13v2"></path>
-    <path d="M9 13v2"></path>
-  </svg>
-
-  <script src="scripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
+
+
+
