--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <p>File Uploaded Successfully!</p>
     </div>
 
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
 
