--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="logo">
             <img src="logo.png" alt="3D-Core Logo" class="logo-img">
-            <h1 class="logo-text" >3D-Core</h1>
+            <h1 class="logo-text">3D-Core</h1>
         </div>
         <p class="subtitle">Your Reliable 3D Printing Partner</p>
     </header>
@@ -33,12 +33,28 @@
             <p id="fileName"></p>
             <p id="status"></p>
         </section>
+
+        <!-- About Us Section -->
+        <section class="about-us card">
+            <h2 class="about-title">About Us</h2>
+            <div class="about-content">
+                <img src="RR.jpg" alt="About Us" class="about-img">
+                <div class="about-text" style="text-align: left;">
+                    <p>We are Roboticore, a passionate club from ENSAM Rabat dedicated to robotics and innovation. Through our workshops and participation in competitions, we have achieved numerous prizes and recognition. This startup is an extension of our club's vision to make 3D printing more accessible, affordable, and easier for students and researchers at ENSAM Rabat and beyond.</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- Success Popup -->
     <div id="successMessage" class="popup" style="display: none;">
         <p>File Uploaded Successfully!</p>
     </div>
+
+    <!-- Footer -->
+    <footer>
+        <p>© 2025 3D-Core. All rights reserved.</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
