--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
             <input type="file" id="fileInput" accept=".stl,.step" style="display: none;">
             <button id="uploadButton" onclick="handleUpload()">Select File</button>
             <p id="fileName"></p>
+        
+            <input type="email" id="emailInput" placeholder="Enter your email">
+            <input type="tel" id="phoneInput" placeholder="Enter your phone number">
+            
             <p id="status"></p>
-        </section>
+        </section>        
 
         <!-- About Us Section -->
         <section class="about-us card">
