--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <button id="uploadButton" onclick="handleUpload()">Select File</button>
             <p id="fileName"></p>
         
-            <input type="email" id="emailInput" placeholder="Enter your email">
-            <input type="tel" id="phoneInput" placeholder="Enter your phone number">
+            <input type="email" id="emailInput" class="input-field" placeholder="Enter your email">
+            <input type="tel" id="phoneInput" class="input-field" placeholder="Enter your phone number">
             
             <p id="status"></p>
         </section>        
