--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
 
         <section class="pricing card">
             <h2>Printing Prices</h2>
-            <p><strong>$0.10 per gram</strong> of printed material.</p>
+            <div class="pricing-options">
+                <div class="pricing-option">
+                    <h3>Sliced File Upload</h3>
+                    <p>For <strong>.gcode</strong> or <strong>.3mf</strong> files</p>
+                    <p class="price">35 MAD / 100g</p>
+                </div>
+                <div class="pricing-option">
+                    <h3>Slicing + Printing</h3>
+                    <p>For <strong>.STEP</strong> or <strong>.STL</strong> files</p>
+                    <p class="price">40 MAD / 100g</p>
+                </div>
+            </div>
         </section>
 
         <section class="upload card">
