--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <section class="upload card">
             <h2>Upload Your 3D Design</h2>
-            <input type="file" id="fileInput" accept=".stl,.step" style="display: none;">
+            <input type="file" id="fileInput" accept=".stl,.step,.gcode,.3mf" style="display: none;">
             <button id="uploadButton" onclick="handleUpload()">Select File</button>
             <p id="fileName"></p>
         
