--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
         <section class="info card">
             <h2>Supported File Formats</h2>
-            <p>We accept <strong>.STEP</strong> and <strong>.STL</strong> files for 3D printing.</p>
+            <p>We accept <strong>.STEP</strong>, <strong>.STL</strong>, <strong>.GCODE</strong>, and <strong>.3MF</strong> files for 3D printing.</p>
         </section>
 
         <section class="pricing card">
