--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <p>File Uploaded Successfully!</p>
     </div>
 
-    <!-- Footer -->
+    <!-- Footer commiting changes sorry -->
     <footer>
         <p>© 2025 3D-Core. All rights reserved.</p>
     </footer>
